feat: added addAll fault
